--- a/frontend/src/app/components/departments/departments.component.html
+++ b/frontend/src/app/components/departments/departments.component.html
@@ -1,3 +1,42 @@
-<app-layout>
-    
+<app-layout [title]="title">
+    <form [formGroup]="form" (submit)="id ? update(id) : store()" class="d-flex justify-content-end">
+        <div class="input-group">
+            <input type="text" formControlName="name" class="form-control"
+                placeholder="Insira o nome do departamento" />
+            <button type="submit" class="btn btn-primary">Enviar</button>
+        </div>
+    </form>
+    <div class="table-responsive mt-3">
+        <table class="table table-striped text-nowrap">
+            <thead class="table-dark">
+                <tr>
+                    <th><i class="fas fa-user"></i> Nome</th>
+                    <th><i class="fas fa-briefcase"></i> Cargos</th>
+                    <th><i class="fas fa-users"></i> Funcionários</th>
+                    <th><i class="fas fa-user"></i> Criado por</th>
+                    <th><i class="fas fa-user"></i> Alterado por</th>
+                    <th><i class="fas fa-cogs"></i> Ações</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let department of departments$ | async">
+                    <td>{{ department.sequence }} - {{ department.name }}</td>
+                    <td>{{ department.positions.length }}</td>
+                    <td>{{ getTotalEmployees(department) }}</td>
+                    <td>{{ department.created_by.name }}</td>
+                    <td>{{ department.modified_by ? department.modified_by.name : 'Não alterado' }}</td>
+                    <td>
+                        <span class="btn-group btn-group-sm">
+                            <a [routerLink]="['/departments',department.id]" class="btn btn-primary">
+                                <i class="fas fa-edit"></i>
+                            </a>
+                            <button class="btn btn-danger" (click)="delete(department)">
+                                <i class="fas fa-trash-alt"></i>
+                            </button>
+                        </span>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </app-layout>
