--- a/frontend/src/app/components/shared/layout/layout.component.html
+++ b/frontend/src/app/components/shared/layout/layout.component.html
@@ -6,4 +6,9 @@
     <li class="nav-item active"> <a class="nav-link" (click)="logout()">Sair</a> </li>
   </ul>
 </nav>
-<ng-content></ng-content>
+<div class="container-fluid">
+  <div class="row mt-3">
+    <h3>{{ title }}</h3>
+    <ng-content></ng-content>
+  </div>
+</div>
