--- a/frontend/src/app/components/sign-in/sign-in.component.html
+++ b/frontend/src/app/components/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<div class="container login-container">
+<div class="container login-container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
