--- a/frontend/src/app/components/shared/layout/layout.component.html
+++ b/frontend/src/app/components/shared/layout/layout.component.html
@@ -1,14 +1,45 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="input-group" *ngIf="(user$ | async) as user">
-    <span class="navbar-text ms-3">{{ user?.email }}</span>
+<nav class="navbar navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" *ngIf="(user$ | async) as user">{{ user?.company }}</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
+      aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" *ngIf="(user$ | async) as user">{{ user?.name }}</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/departments']" routerLinkActive="active">Departamentos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/positions']" routerLinkActive="active">Cargos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/employees']" routerLinkActive="active">Funcionários</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/tasks']" routerLinkActive="active">Tarefas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/support-tickets']" routerLinkActive="active">Chamados</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" (click)="logout()">Sair</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item active"> <a class="nav-link" (click)="logout()">Sair</a> </li>
-  </ul>
 </nav>
 <div class="container-fluid">
   <div class="row mt-3">
-    <h3>{{ title }}</h3>
-    <ng-content></ng-content>
+    <div class="col-12">
+      <h3>{{ title }}</h3>
+      <ng-content></ng-content>
+    </div>
   </div>
 </div>
