--- a/frontend/src/app/components/employees/employees.component.html
+++ b/frontend/src/app/components/employees/employees.component.html
@@ -1,1 +1,82 @@
-<p>employees works!</p>
+<app-layout [title]="title">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <div class="flex-grow-1 me-3">
+            <input type="search" [(ngModel)]="search" (keyup)="filter()" class="form-control"
+                placeholder="Digite sua busca aqui..." />
+        </div>
+        <div class="d-flex align-items-center">
+            <select [(ngModel)]="perPage" (change)="onChangePerPage($event)" class="form-select">
+                <option *ngFor="let option of options" [value]="option">{{ option }}</option>
+            </select>
+        </div>
+    </div>
+
+    <app-spinner [loading]="loading"></app-spinner>
+    <div class="table-responsive mt-3 mb-3" style="max-height: 400px; overflow-y: auto;">
+        <table class="table table-striped">
+            <thead class="table-dark text-nowrap">
+                <tr>
+                    <th (click)="sortBy('name')"><i class="fas fa-user"></i> Nome</th>
+                    <th (click)="sortBy('email')"><i class="fas fa-envelope"></i> Email</th>
+                    <th (click)="sortBy('position.name')"><i class="fas fa-briefcase"></i> Cargo</th>
+                    <th (click)="sortBy('department.name')"><i class="fas fa-users"></i> Departamento</th>
+                    <th (click)="sortBy('created_by.name')"><i class="fas fa-user"></i> Criado por</th>
+                    <th (click)="sortBy('modified_by.name')"><i class="fas fa-user"></i> Alterado por</th>
+                    <th><i class="fas fa-cogs"></i> Ações</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let employee of employees">
+                    <td>{{ employee.name }}</td>
+                    <td>{{ employee.email || 'Email não informado' }}</td>
+                    <td>{{ employee.position.name || 'Não informado' }}</td>
+                    <td>{{ employee.department ?  employee.department.name : 'Não informado' }}</td>
+                    <td>{{ employee.created_by ? employee.created_by.name : 'Não informado' }}</td>
+                    <td>{{ employee.modified_by ? employee.modified_by.name : 'Não informado' }}</td>
+                    <td>
+                        <span class="btn-group btn-group-sm">
+                            <a [routerLink]="['/employees',employee.id]" class="btn btn-primary"
+                                title="Editar registro">
+                                <i class="fas fa-edit"></i>
+                            </a>
+                            <button class="btn btn-danger" title="Excluir" (click)="delete(employee.id)">
+                                <i class="fas fa-trash-alt"></i>
+                            </button>
+                            <button class="btn btn-success" [disabled]="employee.has_user" title="Criar usuário">
+                                <i class="fas fa-user-plus"></i>
+                            </button>
+                        </span>
+                    </td>
+                </tr>
+                <tr *ngIf="employees.length == 0">
+                    <td colspan="7" class="text-center">
+                        Nenhum registro encontrado
+                        <span *ngIf="search">para <strong>{{ search }}</strong></span>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="d-flex justify-content-between align-items-center mb-3" *ngIf="pages != 0">
+        <div class="dataTables_info">
+            Página {{ page }} de {{ pages }}
+        </div>
+        <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-end">
+                <li class="page-item" [class.disabled]="page === 1">
+                    <a class="page-link" (click)="changePage(page - 1)">
+                        <span>&laquo;</span>
+                    </a>
+                </li>
+                <li class="page-item" *ngFor="let p of pageNumbers()" [class.active]="p === page">
+                    <a class="page-link" (click)="changePage(p)">{{ p }}</a>
+                </li>
+                <li class="page-item" [class.disabled]="page === pages">
+                    <a class="page-link" (click)="changePage(page + 1)">
+                        <span>&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</app-layout>
