--- a/frontend/src/app/components/shared/layout/layout.component.html
+++ b/frontend/src/app/components/shared/layout/layout.component.html
@@ -28,6 +28,9 @@
             <a class="nav-link" [routerLink]="['/support-tickets']" routerLinkActive="active">Chamados</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/roles']" routerLinkActive="active">Grupo de usuários / Papéis</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" (click)="logout()">Sair</a>
           </li>
         </ul>
