--- a/frontend/src/app/components/departments/departments.component.html
+++ b/frontend/src/app/components/departments/departments.component.html
@@ -40,8 +40,8 @@
             <tbody>
                 <tr *ngFor="let department of departments">
                     <td> {{ department.name }}</td>
-                    <td>{{ department.positions.length }}</td>
-                    <td>{{ department.employees.length }}</td>
+                    <td (click)="openModalPositions(department)" data-bs-toggle="modal" data-bs-target="#positions"> {{ department.positions.length }} <i class="fas fa-eye" style="color: #0d2d4e;"></i></td>
+                    <td (click)="openModalEmployees(department)" data-bs-toggle="modal" data-bs-target="#employees"> {{ department.employees.length }} <i class="fas fa-eye" style="color: #0d2d4e;"></i></td>
                     <td>{{ department.created_by ? department.created_by.name : 'Não informado' }}</td>
                     <td>{{ department.modified_by ? department.modified_by.name : 'Não alterado' }}</td>
                     <td>
@@ -91,7 +91,7 @@
         </nav>
     </div>
 
-    <div class="modal fade" id="position" tabindex="-1" aria-hidden="true" style="display:none;">
+    <div class="modal fade"  id="position" tabindex="-1" aria-hidden="true" #positionModal>
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -114,4 +114,72 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="positions" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5">{{ departmentName }}</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="table-responsive" style="max-height: 400px; overflow-y: auto;">
+                        <table class="table table-striped table-hover">
+                            <thead class="table-dark">
+                                <tr>
+                                    <th scope="col">Cargos</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let position of positions">
+                                    <td><i class="fas fa-briefcase"></i> {{ position.name }}</td>
+                                </tr>
+                                <tr *ngIf="positions.length === 0">
+                                    <td class="text-muted">Nenhum cargo cadastrado nesse departamento.</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary w-100" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="employees" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5">{{ departmentName }}</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="table-responsive" style="max-height: 400px; overflow-y: auto;">
+                        <table class="table table-bordered table-hover">
+                            <thead class="table-dark">
+                                <tr>
+                                    <th scope="col">Funcionários</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let employee of employees">
+                                    <td><i class="fas fa-user"></i> {{ employee.name }}</td>
+                                </tr>
+                                <tr *ngIf="employees.length === 0">
+                                    <td class="text-muted">Nenhum funcionário cadastrado nesse departamento.</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary w-100" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    
 </app-layout>
