Criando chamados, cadastrando projetos e carregando dados antes de ativar rotas usando o resolver

--- a/frontend/src/app/components/employees/employees.component.html
+++ b/frontend/src/app/components/employees/employees.component.html
@@ -29,14 +29,14 @@
                 <tr *ngFor="let employee of employees">
                     <td>{{ employee.name }}</td>
                     <td>{{ employee.email || 'Email não informado' }}</td>
-                    <td>{{ employee.position.name || 'Não informado' }}</td>
-                    <td>{{ employee.department ?  employee.department.name : 'Não informado' }}</td>
+                    <td>{{ employee.position ? employee.position.name : 'Não informado' }}</td>
+                    <td>{{ employee.department ? employee.department.name : 'Não informado' }}</td>
                     <td>{{ employee.created_by ? employee.created_by.name : 'Não informado' }}</td>
                     <td>{{ employee.modified_by ? employee.modified_by.name : 'Não informado' }}</td>
                     <td>
                         <span class="btn-group btn-group-sm">
-                            <a [routerLink]="['/employees',employee.id]" class="btn btn-primary"
-                                title="Editar registro">
+                            <a class="btn btn-primary" title="Editar registro" type="button" data-bs-toggle="modal"
+                                data-bs-target="#employee" (click)="openModalEditEmployee(employee)">
                                 <i class="fas fa-edit"></i>
                             </a>
                             <button class="btn btn-danger" title="Excluir" (click)="delete(employee.id)">
@@ -64,19 +64,71 @@
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-end">
                 <li class="page-item" [class.disabled]="page === 1">
-                    <a class="page-link" (click)="changePage(page - 1)">
+                    <a class="page-link" (click)="changePage(page - 1)" style="cursor: pointer;">
                         <span>&laquo;</span>
                     </a>
                 </li>
                 <li class="page-item" *ngFor="let p of pageNumbers()" [class.active]="p === page">
-                    <a class="page-link" (click)="changePage(p)">{{ p }}</a>
+                    <a class="page-link" (click)="changePage(p)" style="cursor: pointer;">{{ p }}</a>
                 </li>
                 <li class="page-item" [class.disabled]="page === pages">
-                    <a class="page-link" (click)="changePage(page + 1)">
+                    <a class="page-link" (click)="changePage(page + 1)" style="cursor: pointer;">
                         <span>&raquo;</span>
                     </a>
                 </li>
             </ul>
         </nav>
+    </div>
+
+    <div class="modal fade" id="employee" tabindex="-1" aria-hidden="true" #employeeEditModal>
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5">Editar funcionário</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form [formGroup]="formEdit" (submit)="updateEmployee()">
+                        <input type="hidden" formControlName="id"/>
+                        <div class="mb-3">
+                            <label for="name" class="form-label">
+                                <i class="fas fa-user"></i> Nome
+                            </label>
+                            <input type="text" formControlName="name" class="form-control" />
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">
+                                <i class="fas fa-envelope"></i> Email
+                            </label>
+                            <input type="text" formControlName="email" class="form-control" />
+                        </div>
+                        <div class="mb-3">
+                            <label for="department" class="form-label">
+                                <i class="fas fa-building"></i> Departamento
+                            </label>
+                            <select formControlName="department" class="form-select">
+                                <option *ngFor="let department of departments" [value]="department.id">{{
+                                    department.name }}</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="position" class="form-label">
+                                <i class="fas fa-briefcase"></i> Cargo
+                            </label>
+                            <select formControlName="position_id" class="form-select">
+                                <option *ngFor="let position of positions" [value]="position.id">{{ position.name }}
+                                </option>
+                            </select>
+                        </div>
+                        <button type="submit" class="btn btn-primary">
+                            <i class="fas fa-save"></i> Salvar
+                        </button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary w-100" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
     </div>
 </app-layout>
