--- a/frontend/src/app/components/departments/departments.component.html
+++ b/frontend/src/app/components/departments/departments.component.html
@@ -25,7 +25,7 @@
     </div>
     
     <app-spinner [loading]="loading"></app-spinner>
-    <div class="table-responsive mt-3"  style="max-height: 400px; overflow-y: auto;">
+    <div class="table-responsive mt-3 mb-3"  style="max-height: 400px; overflow-y: auto;">
         <table class="table table-striped text-nowrap">
             <thead class="table-dark">
                 <tr>
@@ -68,22 +68,22 @@
             </tbody>
         </table>
     </div>
-    <div class="d-flex justify-content-between align-items-center mb-3" *ngIf="pages != 0">
+    <div class="d-flex justify-content-between align-items-center" *ngIf="pages != 0">
         <div class="dataTables_info">
             Página {{ page }} de {{ pages }}
         </div>
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-end">
                 <li class="page-item" [class.disabled]="page === 1">
-                    <a class="page-link" (click)="changePage(page - 1)">
+                    <a class="page-link" (click)="changePage(page - 1)" style="cursor: pointer;">
                         <span>&laquo;</span>
                     </a>
                 </li>
                 <li class="page-item" *ngFor="let p of pageNumbers()" [class.active]="p === page">
-                    <a class="page-link" (click)="changePage(p)">{{ p }}</a>
+                    <a class="page-link" (click)="changePage(p)"  style="cursor: pointer;">{{ p }}</a>
                 </li>
                 <li class="page-item" [class.disabled]="page === pages">
-                    <a class="page-link" (click)="changePage(page + 1)">
+                    <a class="page-link" (click)="changePage(page + 1)"  style="cursor: pointer;">
                         <span>&raquo;</span>
                     </a>
                 </li>
@@ -180,6 +180,4 @@
             </div>
         </div>
     </div>
-    
-    
 </app-layout>
