--- a/frontend/src/app/components/employees/employees.component.html
+++ b/frontend/src/app/components/employees/employees.component.html
@@ -81,7 +81,7 @@
     </div>
 
     <div class="modal fade" id="employee" tabindex="-1" aria-hidden="true" #employeeEditModal>
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog modal-md">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5">Editar funcionário</h1>
@@ -89,18 +89,22 @@
                 </div>
                 <div class="modal-body">
                     <form [formGroup]="formEdit" (submit)="updateEmployee()">
-                        <input type="hidden" formControlName="id"/>
+                        <input type="hidden" formControlName="id" />
                         <div class="mb-3">
                             <label for="name" class="form-label">
                                 <i class="fas fa-user"></i> Nome
                             </label>
                             <input type="text" formControlName="name" class="form-control" />
+                            <app-messages-validators [control]="formEdit.controls['name']"
+                                field="nome do funcionário"></app-messages-validators>
                         </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">
                                 <i class="fas fa-envelope"></i> Email
                             </label>
                             <input type="text" formControlName="email" class="form-control" />
+                            <app-messages-validators [control]="formEdit.controls['email']"
+                                field="email do funcionário"></app-messages-validators>
                         </div>
                         <div class="mb-3">
                             <label for="department" class="form-label">
@@ -119,8 +123,10 @@
                                 <option *ngFor="let position of positions" [value]="position.id">{{ position.name }}
                                 </option>
                             </select>
+                            <app-messages-validators [control]="formEdit.controls['position_id']"
+                                field="cargo"></app-messages-validators>
                         </div>
-                        <button type="submit" class="btn btn-primary">
+                        <button type="submit" class="btn btn-primary w-100" [disabled]="formEdit.invalid">
                             <i class="fas fa-save"></i> Salvar
                         </button>
                     </form>
