--- a/frontend/src/app/components/shared/spinner/spinner.component.html
+++ b/frontend/src/app/components/shared/spinner/spinner.component.html
@@ -1,4 +1,6 @@
-<div class="text-center" *ngIf="loading">
-    <span class="spinner-border"> </span>
-    <h3>Sua requisição está sendo processada...</h3>
+<div class="spinner-overlay" *ngIf="loading">
+    <div class="text-center">
+        <span class="spinner-border"></span>
+        <h3>Sua requisição está sendo processada...</h3>
+    </div>
 </div>
