Criando Pipe e adicionando coluna de nível de visibilidade do usuário

--- a/frontend/src/app/components/shared/layout/layout.component.html
+++ b/frontend/src/app/components/shared/layout/layout.component.html
@@ -7,7 +7,7 @@
     </button>
     <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar">
       <div class="offcanvas-header">
-        <h5 class="offcanvas-title" *ngIf="(user$ | async) as user">{{ user?.name }} ({{ user?.role }})</h5>
+        <h5 class="offcanvas-title" *ngIf="(user$ | async) as user">{{ user?.name }} ({{ user?.role }}/ {{ user?.visibility_level }})</h5>
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
