--- a/frontend/src/app/components/roles/roles.component.html
+++ b/frontend/src/app/components/roles/roles.component.html
@@ -1,15 +1,25 @@
 <app-layout [title]="title">
-    <form [formGroup]="form" (submit)="id ? update(id) : store()" class="row g-3 align-items-center">
+    <form [formGroup]="form" (submit)="id ? update(id) : store()" class="row g-3">
         <div class="col-md-4">
-            <input type="text" formControlName="name" class="form-control" placeholder="Nome do grupo de usuários" />
+            <label for="name" class="form-label">
+                <i class="fas fa-tag"></i> Nome: 
+            </label>
+            <input type="text" id="name" formControlName="name" class="form-control" placeholder="Nome do grupo de usuários" />
+            <app-messages-validators [control]="form.controls['name']"
+            field="nome do papel"></app-messages-validators>
         </div>
         <div class="col-md-6">
-            <input type="text" formControlName="description" class="form-control"
+            <label for="description" class="form-label">
+                <i class="fas fa-info-circle"></i> Descrição: 
+            </label>
+            <input type="text" id="description" formControlName="description" class="form-control"
                 placeholder="Descrição do grupo de usuários" />
+                <app-messages-validators [control]="form.controls['description']"
+                field="campo descrição"></app-messages-validators>
         </div>
-        <div class="col-md-2 d-flex justify-content-end">
-            <button type="submit" class="btn btn-primary w-100">
-                Enviar
+        <div class="col-md-2  align-self-end">
+            <button type="submit" class="btn btn-primary w-100" [disabled]="form.invalid">
+                <i class="fas fa-save"></i>  Enviar
             </button>
         </div>
     </form>
